# FrameScope

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Dashboard/: app.py
Dashboard/.streamlit/: config.toml
Dashboard/Data_access/: db.py
Dashboard/Pages/: 01_home.py  02_reddit.py  03_report.py  04_repo.py
Docs/: REDDIT_AI_DISCOURSE_ANALYSIS_REPORT.md  arctic_shift_api.md  database_schema.md  model_selection.md  report.tex
Framescope/: __init__.py  arctic_shift.py  download_ollama_models.py
LLM results/Annotation/: Reddit_Post_sample_MetaphorAnnotation.csv
LLM results/LLM_Comparison/: Metaphor_Data_Myra_Chang.csv
LLM results/model_eval/: GPT_Batch_results_New_Prompt.csv  gpt41_old_prompt_full_predictions.csv  gpt41_old_prompt_overall_results.csv  gpt41_old_prompt_per_metaphor_results.csv  model_performance.csv  model_performance_latency-cost.csv
Notebooks/: 00_LLM_Old.ipynb  01_LLM_comparison_metrics.ipynb  02_label_llm_debug_notebook.ipynb  03_reddit_metaphor_inference.ipynb
Prompts/: metaphor_classification_v1.txt  monthly_llm_summary_v1.txt  old_prompt.txt  stance_classification_v1.txt  volume_shift_summary_v1.txt  weekly_llm_summary_v1.txt  yearly_llm_summary_v1.txt
Scripts/: 00_backfill_reddit.py  00_create_database_schema.py  01_fetch_reddit.py  02_clean_store.py  03_sentence_preprocess.py  04_update_database.py  05_label_llm.py  06_weekly_aggregate.py  06b_backfill_weekly_aggregate.py  07_weekly_llm_summary.py  08_monthly_llm_summary.py  09_yearly_llm_summary.py  10_volume_shift_summary.py  11_archive_and_prune.py  12_upload_aggregate_to_neon.py  13_run_weekly_pipeline.py
Setup/: download_ollama_models.py
archive/2026-W18/: framescope_full_20260427_090640.db-shm  framescope_full_20260427_090640.db-wal  framescope_full_20260427_090650.db-shm  framescope_full_20260427_090650.db-wal  framescope_full_20260427_090941.db-shm  (+1 more)
arcshiftwrap/: __init__.py  arctic_shift.py
(+1 files in other folders)
