[project]
name = "framescope"
version = "0.2.0"
description = "Pipeline for collecting, labeling, and analyzing AI metaphor framing and stance in Reddit discourse."
requires-python = ">=3.9"
authors = [
    {name = "Sagnik Chakravarty", email = "sagnik@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/sagnik-chakravarty/FrameScope"
keywords = ["reddit", "ai", "metaphor", "nlp", "llm"]

dependencies = [
    "requests",
    "pandas",
    "numpy",
    "matplotlib",
    "openai",
    "python-dotenv",
    "pyyaml",
    "scikit-learn",
    "tqdm",
    "spacy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Framescope*"]