[project]
name = "arcshiftwrap"
version = "0.3.0"
description = "Python client for the Arctic Shift API."
requires-python = ">=3.9"
authors = [
    {name = "Sagnik Chakravarty", email = "sagnik@example.com"},
]
license = {text = "MIT"}
readme = "Docs/arctic_shift_api.md"

dependencies = [
    "requests"
]

[project.urls]
Repository = "https://github.com/sagnik-chakravarty/FrameScope"

[tool.setuptools.packages.find]
where = ["."]
include = ["arcshiftwrap*"]